# VibratingString

./: .gitignore  README.md  theory.tex
src/: CMakeLists.txt  main.cpp  vcpkg.json
src/approximator/: Approximator.cpp  Approximator.h  CMakeLists.txt
src/input-manager/: CMakeLists.txt  Callback.h  Event.h  ICallback.h  InputManager.cpp  InputManager.h
